--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <title>Touch The Nums</title>
 </head>
 <body onload="init()">
+    <header>
+        <ul>
+            <li>Home</li>
+            <li>Nums</li>
+            <li>About</li>
+        </ul>
+    </header>
     <button>restart</button>
     <h3>Next Num is: <span></span></h3>
     <table>
